--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/alex-vidal.png" alt="alex-vidal">
+                    <img src="assets/img/vishwesh-thonte.png" alt="vishwesh-thonte">
                 </div>
 
             </div>
@@ -107,7 +107,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Vishwesh, a full stuck developer, a Ruby enthusiast, and a guy slighty obsessed for code quality. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
+                        <p>Hello! I'm Vishwesh, a Software Developer, an Innovation enthusiast, and a guy slighty immersed in his own dreamland. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
                         <a href="#" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Ruby</h4>
+                            <h4>Linux</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="66"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
@@ -185,14 +185,14 @@
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Back End Developer">
                             <h4>Back-end</h4>
-                            <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
+                            <p>Utilising php to build things that bring smile on people's faces. I love to build things from scratch and re-inventing the wheel</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/consultancy.svg" alt="Coding">
-                            <h4>Consultancy</h4>
-                            <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
+                            <h4>DevOps</h4>
+                            <p>I like to play around with operating systems, tweaking, breaking stuff and then again trying to fix them gives an adrenaline rush</p>
                         </div><!-- /.service -->
                     </div>
                 </div>
