--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                     <h1>Vishwesh Thonte</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Full Stack Developer</p>
+                        <p class="job-title">Innovator<br><br>Software Engineer</p>
                         <a href="#contact" class="btn btn-fill ">Hire me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
@@ -293,8 +293,12 @@
             <div class="container">
 
                 <h3>Contact</h3>
+
                 <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                <form>
+
+		<p>I have a limited availability right now. Please contact me by <a href="mailto:vthonte@gmail.com">email</a></p>
+
+<!--                <form>
                     <div class="row">
                         <div class="col-sm-6">
                             <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
@@ -308,7 +312,10 @@
                     </div>
                     <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
                 </form>
+-->
             </div>
+
+
         </section><!-- /.section-form -->
 
     </main><!-- /#main -->
@@ -322,7 +329,7 @@
                     <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
                     <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
                 </div>
-                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2017. All Rights Reserved</p></div>
+                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2020. All Rights Reserved</p></div>
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
                         <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
