numbers and years of experience changed

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
+
     <!-- Favicon
     ================================================== -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -274,11 +275,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="10" data-speed="2000">0</p>
+                        <p class="counter start" data-to="1" data-speed="2000">0</p>
                         <h4>Years Experience</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="120" data-speed="2000">0</p>       
+                        <p class="counter start" data-to="3" data-speed="2000">0</p>       
                         <h4>Projects Delivered</h4>      
                     </div>
                     <div class="col-sm-4 col-xs-12">
@@ -328,6 +329,7 @@
                     <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
                     <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
                     <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
+                    <a class="icon github-bg" href="#"><i class="icon-github"></i></a>
                 </div>
                 <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2020. All Rights Reserved</p></div>
                 <div class="col-sm-4 col-xs-3">
